📷 Added album result image asset

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   assets:
     - assets/images/albums.jpg
     - assets/images/tracks.jpg
+    - assets/images/artists.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
