--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.2
   sqflite: ^1.3.1
   path: ^1.7.0
+  path_provider: ^1.6.11
 
 
   # The following adds the Cupertino Icons font to your application.
