--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   sqflite: ^1.3.1
   path: ^1.7.0
   path_provider: ^1.6.11
+  palette_generator: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
