--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   path: ^1.7.0
   path_provider: ^1.6.11
   palette_generator: ^0.2.3
-  audioplayers: ^0.15.1
+  just_audio: ^0.3.2
+  audio_service: ^0.13.0
 
 
   # The following adds the Cupertino Icons font to your application.
