--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,7 @@
 {
     "current_version": "0.0.2",
     "language": "en_us",
+    "server": "harmonoidservice.herokuapp.com",
     "startup_completed": false,
     "theme": 0,
     "accent": 0
