--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -17,13 +17,13 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
-        channel:
+        channel: 'stable'
     
     - run: flutter pub get
         
-    - run: flutter build apk
+    - run: flutter build apk --verbose
     
     - uses: actions/upload-artifact@v1
       with:
-        name: app-master
-        path: build/app/outputs/apk/release/app-master.apk
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
