--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,7 +61,7 @@ android {
    }
    buildTypes {
        release {
-           signingConfig signingConfigs.release
+           signingConfig signingConfigs.debug
        }
    }
 }
