--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: harmonoid
-description: A new Flutter project.
+description: The music app, you always dreamt.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,14 +15,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.3+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^1.1.2
+  http: ^0.12.2
+  path: ^1.7.0
+  path_provider: ^1.6.11
+  just_audio: ^0.3.2
+  audio_service: ^0.13.0
+  url_launcher: ^5.5.0
+  dart_tags: ^0.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
