--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/initialAppConfiguration.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
