--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - master
+    - development
         
 jobs:
   build:
@@ -17,7 +18,7 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'stable'
+        channel: 'master'
     
     - run: flutter pub get
         
