🔧 Switched back to stable channel

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -18,7 +18,7 @@ jobs:
     
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'master'
+        channel: 'stable'
     
     - run: flutter pub get
         
