--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^5.5.0
   dart_tags: ^0.3.1
   permission_handler: ^5.0.1+1
+  share: ^0.6.5+4
 
 
   # The following adds the Cupertino Icons font to your application.
