--- a/assets/initialAppConfiguration.json
+++ b/assets/initialAppConfiguration.json
@@ -1,8 +1,8 @@
 {
     "version": "0.0.3+1",
     "languageRegion": 0,
-    "theme": 0,
-    "accent": 0,
+    "appTheme": 0,
+    "accentColor": 0,
     "homeUri": "harmonoid.github.io",
     "collectionStartTab": 0,
     "collectionDirectoryType": 0,
