⬇ Added flutter_local_notifications

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path: ^1.7.0
   path_provider: ^1.6.11
   media_metadata_retriever: ^0.0.1+4
+  flutter_local_notifications: ^3.0.3
   just_audio: ^0.3.2
   audio_service: ^0.13.0
   url_launcher: ^5.5.0
