🧷 Updated assets in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/initialAppConfiguration.json
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/albums.jpg
+    - assets/images/tracks.jpg
+    - assets/images/artists.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
