🧷 Updated image assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/images/albums.jpg
     - assets/images/tracks.jpg
     - assets/images/artists.jpg
+    - assets/images/exception.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
