🔧 Added asset to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/images/tracks.jpg
     - assets/images/artists.jpg
     - assets/images/exception.jpg
+    - assets/images/collection/album.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
