🖼 Updated project assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/images/artists.jpg
     - assets/images/exception.jpg
     - assets/images/collection/album.jpg
+    - assets/images/about/header.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
