--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   share: ^0.6.5+4
   palette_generator: ^0.2.3
+  flag: ^3.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
