--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,14 @@ dependencies:
   provider: ^5.0.0
   assets_audio_player: ^3.0.3+2
   flutter_media_metadata: ^0.1.0
-  http: ^0.13.0
-  path: ^1.8.0
-  path_provider: ^2.0.1
   flutter_local_notifications: ^5.0.0
-  url_launcher: ^6.0.3
+  file_picker: ^3.0.0
   permission_handler: ^6.1.1
   share: ^2.0.1
   palette_generator: ^0.3.0
+  http: ^0.13.0
+  path: ^1.8.0
+  url_launcher: ^6.0.3
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
   flag: ^5.0.0-nullsafety
 
