--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   url_launcher: ^6.0.3
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
   flag: ^5.0.0-nullsafety
+  marquee: ^2.0.0
+  auto_size_text: ^3.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
