--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,3 +43,7 @@ flutter:
     - assets/images/discover-tracks.jpg
     - assets/images/discover-artists.jpg
     - assets/images/exception.jpg
+    - assets/images/credits-album-art-0.jpg
+    - assets/images/credits-album-art-1.jpg
+    - assets/images/credits-album-art-2.jpg
+    - assets/images/credits-album-art-3.jpg
