--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: harmonoid
 description: A music app with a beautiful UI to play all your music!
 publish_to: 'none'
-version: 0.0.5+2
+version: 0.0.6
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   animations: ^2.0.0
   provider: ^5.0.0
-  assets_audio_player: ^3.0.3+2
+  assets_audio_player:
+    git:
+      url: https://github.com/jxzy999/Flutter-AssetsAudioPlayer.git
   flutter_media_metadata: ^0.1.0
   flutter_local_notifications: ^5.0.0
   file_picker: ^3.0.0
