--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: harmonoid
 description: A music app with a beautiful UI to play all your music!
 publish_to: 'none'
-version: 0.0.6
+version: 0.0.7+5001
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
