--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
   animations: ^2.0.0
   provider: ^5.0.0
   assets_audio_player:
-    git:
-      url: https://github.com/jxzy999/Flutter-AssetsAudioPlayer.git
+  dart_vlc:
   flutter_media_metadata: ^0.1.0
   flutter_local_notifications: ^5.0.0
   file_picker: ^3.0.0
@@ -28,6 +27,8 @@ dependencies:
   marquee: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   bitsdojo_window: ^0.1.0
+  filepicker_windows:
+  desktoasts:
 
 dev_dependencies:
   flutter_test:
