--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,12 @@ dependencies:
   http: ^0.13.0
   path: ^1.8.0
   url_launcher: ^6.0.3
-  implicitly_animated_reorderable_list: 0.4.0
+  implicitly_animated_reorderable_list: ^0.4.0
   flag: ^5.0.0-nullsafety
   marquee: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   bitsdojo_window: ^0.1.0
   filepicker_windows:
-  desktoasts:
 
 dev_dependencies:
   flutter_test:
