--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,14 @@ dependencies:
   marquee: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
   bitsdojo_window: ^0.1.0
-  artwork_extractor_dart:
-    git:
-      https://github.com/mytja/artwork_extractor_dart
   file_selector_linux: ^0.0.2+1
   file_selector_windows: ^0.0.2+1
   file_selector: ^0.8.2
-  dart_vlc: ^0.1.0
+  dart_vlc:
+    git:
+      url: https://github.com/alexmercerind/dart_vlc
   assets_audio_player: ^3.0.3+6
+  artwork_extractor_dart: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
