--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/flutter_media_metadata.git
       ref: 919819aaed18ced20994f3ed004efb6d1f689a9d
+  filepicker_windows: ^2.0.0
   flutter_local_notifications: ^5.0.0
   file_picker: ^3.0.0
   permission_handler: ^6.1.1
@@ -29,9 +30,6 @@ dependencies:
   path: ^1.8.0
   url_launcher: ^6.0.3
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
-  flag: ^5.0.0-nullsafety
-  marquee: ^2.0.0
-  auto_size_text: ^3.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
