--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   permission_handler: ^6.1.1
   share: ^2.0.1
   palette_generator: ^0.3.0
+  dart_discord_rpc: ^0.0.1
   http: ^0.13.0
   path: ^1.8.0
   url_launcher: ^6.0.3
