--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  msix:
+    git:
+      url: git://github.com/alexmercerind/msix.git
+      ref: a2c15a8662dd346b2738ea89538179f532d4f437
 
 flutter:
   uses-material-design: true
@@ -57,3 +61,18 @@ flutter:
     - assets/images/credits-album-art-1.jpg
     - assets/images/credits-album-art-2.jpg
     - assets/images/credits-album-art-3.jpg
+
+msix_config:
+  msix_version: 0.0.1.0
+  display_name: Harmonoid
+  identity_name: com.alexmercerind.harmonoid
+  file_extension: ogg, ogx, aac, m4a, mp3, wma, wav, aiff, flac, opus
+  icons_background_color: transparent
+  architecture: x64
+  capabilities: broadFileSystemAccess, musicLibrary
+  vs_generated_images_folder_path: ./windows/msix/assets
+  publisher_display_name: Hitesh Kumar Saini
+  publisher: E=saini123hitesh@gmail.com, CN=Hitesh Kumar Saini, OU=com.alexmercerind, O=com.alexmercerind, L=Dehradun, S=Uttarakhand, C=IN
+  certificate_path: ./windows/msix/certificate.pfx
+  store: false
+  
