--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,16 @@ dependencies:
   path: ^1.8.0
   url_launcher: ^6.0.3
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
+  youtube_explode_dart: ^1.10.6
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   msix:
     git:
       url: git://github.com/alexmercerind/msix.git
       ref: a2c15a8662dd346b2738ea89538179f532d4f437
+
+dependency_overrides: 
+  freezed_annotation: 0.14.2
 
 flutter:
   uses-material-design: true
