--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,13 +52,11 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'beta'
-
+      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
       - run: flutter build linux
-
       - uses: actions/upload-artifact@v1
         with:
           name: harmonoid-linux-exe
           path: build/linux/x64/release/bundle
-      
