⚗️ Linux: add --verbose flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
-      - run: flutter build linux
+      - run: flutter build linux --verbose
       - uses: actions/upload-artifact@v1
         with:
           name: harmonoid-linux-exe
