--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'beta'
-      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev libmediainfo-dev
+      - run: sudo apt-get update
+      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev libmediainfo-dev dpkg-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
       - run: flutter build linux --verbose
@@ -60,3 +61,10 @@ jobs:
         with:
           name: harmonoid-linux-exe
           path: build/linux/x64/release/bundle
+      - run: mkdir linux/debian/$(dir linux/debian)/usr/local
+      - run: cp -R build/linux/x64/release/bundle linux/debian/$(dir linux/debian)/usr/local/bin -f
+      - run: dpkg-deb --build --root-owner-group linux/debian/$(dir linux/debian)
+      - uses: actions/upload-artifact@v1
+        with:
+          name: harmonoid-linux-deb
+          path: linux/debian/$(dir linux/debian)
