--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,18 @@ jobs:
           fileName: 'certificate.pfx'
           encodedString: ${{ secrets.CERTIFICATE }}
 
-      - run: signtool.exe sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "build/windows/runner/Release/harmonoid.exe"
+      - run: |
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "build/windows/runner/Release/harmonoid.exe"
+        shell: cmd
       - run: cp -r build/windows/runner/Release harmonoid-windows-exe
       - run: tar.exe -a -c -f harmonoid-windows-exe.zip harmonoid-windows-exe
 
       - run: |
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" "Harmonoid_InnoSetup.iss"
         shell: cmd
-      - run: signtool.exe sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "Output/harmonoid-windows-setup.exe"
-      
+      - run: |
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "Output/harmonoid-windows-setup.exe"
+        shell: cmd
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
