--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,16 @@ jobs:
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
       - run: flutter build windows
-      - uses: timheuer/base64-to-file@v1
+      
+      - name: Create PFX
+        id: create_pfx
+        uses: timheuer/base64-to-file@v1
         with:
           fileName: 'certificate.pfx'
-          fileDir: .
           encodedString: ${{ secrets.CERTIFICATE }}
-
+          
       - run: |
-          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "build/windows/runner/Release/harmonoid.exe"
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "${{ steps.create_pfx.outputs.filePath }}" /p ${{ secrets.PASSWORD }} "build/windows/runner/Release/harmonoid.exe"
         shell: cmd
       - run: cp -r build/windows/runner/Release harmonoid-windows-exe
       - run: tar.exe -a -c -f harmonoid-windows-exe.zip harmonoid-windows-exe
@@ -34,7 +36,7 @@ jobs:
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" "Harmonoid_InnoSetup.iss"
         shell: cmd
       - run: |
-          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "certificate.pfx" /p ${{ secrets.PASSWORD }} "Output/harmonoid-windows-setup.exe"
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "${{ steps.create_pfx.outputs.filePath }}" /p ${{ secrets.PASSWORD }} "Output/harmonoid-windows-setup.exe"
         shell: cmd
       - name: Release
         uses: softprops/action-gh-release@v1
