👷‍♂️ Add Windows EXE signing (#83)
* 🔖 Bump project version to v0.1.4

* 👷‍♂️ Add Windows EXE & installer signing

* 💚 Fix Windows signing

* 💚 Fix Windows signing

* 💚 Fix Windows PFX path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.TOKEN }}
           submodules: 'recursive'
 
       - uses: subosito/flutter-action@v1
@@ -19,14 +18,26 @@ jobs:
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
       - run: flutter build windows
+      
+      - name: Create PFX
+        id: create_pfx
+        uses: timheuer/base64-to-file@v1
+        with:
+          fileName: 'certificate.pfx'
+          encodedString: ${{ secrets.CERTIFICATE }}
+          
+      - run: |
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "${{ steps.create_pfx.outputs.filePath }}" /p ${{ secrets.PASSWORD }} "build/windows/runner/Release/harmonoid.exe"
+        shell: cmd
+      - run: cp -r build/windows/runner/Release harmonoid-windows-exe
+      - run: tar.exe -a -c -f harmonoid-windows-exe.zip harmonoid-windows-exe
 
       - run: |
           "%programfiles(x86)%\Inno Setup 6\iscc.exe" "Harmonoid_InnoSetup.iss"
         shell: cmd
-      
-      - run: cp -r build/windows/runner/Release harmonoid-windows-exe
-      - run: tar.exe -a -c -f harmonoid-windows-exe.zip harmonoid-windows-exe
-      
+      - run: |
+          "%programfiles(x86)%\Windows Kits\10\App Certification Kit\signtool.exe" sign /tr http://timestamp.digicert.com /td sha256 /fd sha256 /f "${{ steps.create_pfx.outputs.filePath }}" /p ${{ secrets.PASSWORD }} "Output/harmonoid-windows-setup.exe"
+        shell: cmd
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
@@ -45,7 +56,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.TOKEN }}
           submodules: 'recursive'
       
       - uses: subosito/flutter-action@v1
